Fixed Build & In progress, of Server/UI integration

--- a/Server/public/game/index.html
+++ b/Server/public/game/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/game.loader.js";
       var config = {
-        dataUrl: buildUrl + "/game.data.unityweb",
-        frameworkUrl: buildUrl + "/game.framework.js.unityweb",
-        codeUrl: buildUrl + "/game.wasm.unityweb",
+        dataUrl: buildUrl + "/game.data.br",
+        frameworkUrl: buildUrl + "/game.framework.js.br",
+        codeUrl: buildUrl + "/game.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Circuit Runners",
